--- a/nais/prod-gcp/nais.yaml
+++ b/nais/prod-gcp/nais.yaml
@@ -1,20 +1,20 @@
 apiVersion: "nais.io/v1alpha1"
 kind: "Application"
 metadata:
-  name: tms-microfrontend-template-ssr
-  namespace: min-side
+  name: pensjonskalkulator-microfrontend-ssr
+  namespace: pensjonskalkulator
   labels:
-    team: min-side
+    team: pensjonskalkulator
 spec:
   tokenx:
     enabled: true
   image: {{ image }}
   port: 3000
   liveness:
-    path: /tms-microfrontend-template-ssr/api/internal/isAlive
+    path: /pensjonskalkulator-microfrontend-ssr/api/internal/isAlive
     initialDelay: 10
   readiness:
-    path: /tms-microfrontend-template-ssr/api/internal/isReady
+    path: /pensjonskalkulator-microfrontend-ssr/api/internal/isReady
     initialDelay: 10
   replicas:
     min: 2
@@ -24,13 +24,10 @@ spec:
       rules:
         - application: tms-min-side
   ingresses:
-    - "https://www.nav.no/tms-microfrontend-template-ssr"
+    - "https://www.nav.no/pensjonskalkulator-microfrontend-ssr"
   resources:
     limits:
       memory: 768Mi
     requests:
       cpu: "20m"
       memory: 128Mi
-  env:
-    - name: EXAMPLE_API_URL
-      value: "https://example.dev.nav.no/api"
