--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -57,7 +57,7 @@ jobs:
     with:
       id: "pensjonskalkulator-microfrontend"
       url: "http://pensjonskalkulator-microfrontend-ssr/pensjonskalkulator-microfrontend-ssr"
-      name: "pensjonskalkulator-microfrontend-ssr"
+      appname: "pensjonskalkulator-microfrontend-ssr"
       namespace: "pensjonskalkulator"
       cluster: dev-gcp
       commitmsg: ${{ github.event.head_commit.message}}
@@ -72,7 +72,7 @@ jobs:
 #    with:
 #      id: "pensjonskalkulator-microfrontend"
 #      url: "http://pensjonskalkulator-microfrontend-ssr/pensjonskalkulator-microfrontend-ssr"
-#      name: "pensjonskalkulator-microfrontend-ssr"
+#      appname: "pensjonskalkulator-microfrontend-ssr"
 #      namespace: "pensjonskalkulator"
 #      cluster: prod-gcp
 #      commitmsg: ${{ github.event.head_commit.message}}
