--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "type": "module",
   "version": "0.0.1",
   "scripts": {
-    "dev": "astro dev --mode locals",
+    "dev": "astro dev",
     "start": "astro dev",
-    "build": "astro check && astro build --mode locals",
+    "build": "astro check && astro build",
     "mock": "tsx mock/server.ts",
     "preview": "astro preview",
     "astro": "astro",
