--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -56,7 +56,7 @@ jobs:
     needs: build
     with:
       id: "pensjonskalkulator-microfrontend"
-      url: "http://pensjonskalkulator-microfrontend-ssr/pensjonskalkulator-microfrontend-ssr"
+      url: "http://pensjonskalkulator-microfrontend-ssr.pensjonskalkulator/pensjonskalkulator-microfrontend-ssr"
       appname: "pensjonskalkulator-microfrontend-ssr"
       namespace: "pensjonskalkulator"
       cluster: dev-gcp
@@ -71,7 +71,7 @@ jobs:
 #    needs: build
 #    with:
 #      id: "pensjonskalkulator-microfrontend"
-#      url: "http://pensjonskalkulator-microfrontend-ssr/pensjonskalkulator-microfrontend-ssr"
+#      url: "http://pensjonskalkulator-microfrontend-ssr.pensjonskalkulator/pensjonskalkulator-microfrontend-ssr"
 #      appname: "pensjonskalkulator-microfrontend-ssr"
 #      namespace: "pensjonskalkulator"
 #      cluster: prod-gcp
