--- a/nais/prod-gcp/nais.yaml
+++ b/nais/prod-gcp/nais.yaml
@@ -11,10 +11,10 @@ spec:
   image: {{ image }}
   port: 3000
   liveness:
-    path: /pensjonskalkulator-microfrontend-ssr/api/internal/isAlive
+    path: /api/internal/isAlive
     initialDelay: 10
   readiness:
-    path: /pensjonskalkulator-microfrontend-ssr/api/internal/isReady
+    path: /api/internal/isReady
     initialDelay: 10
   replicas:
     min: 2
@@ -23,8 +23,7 @@ spec:
     inbound:
       rules:
         - application: tms-min-side
-  ingresses:
-    - "https://www.nav.no/pensjonskalkulator-microfrontend-ssr"
+          namespace: min-side
   resources:
     limits:
       memory: 768Mi
