--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -63,20 +63,20 @@ jobs:
       ssr: true
     secrets: inherit
 
-#  update-manifest-prod-gcp:
-#    if: github.ref == 'refs/heads/main'
-#    uses: navikt/tms-deploy/.github/workflows/oppdater-mikrofrontend-manifest-v3.yaml@main
-#    needs: build
-#    with:
-#      id: "pensjonskalkulator-microfrontend"
-#      url: "http://pensjonskalkulator-microfrontend-ssr.pensjonskalkulator"
-#      appname: "pensjonskalkulator-microfrontend-ssr"
-#      namespace: "pensjonskalkulator"
-#      cluster: prod-gcp
-#      commitmsg: ${{ github.event.head_commit.message}}
-#      fallback: "http://pensjonskalkulator-microfrontend-ssr.pensjonskalkulator"
-#      ssr: true
-#    secrets: inherit
+  update-manifest-prod-gcp:
+    if: github.ref == 'refs/heads/main'
+    uses: navikt/tms-deploy/.github/workflows/oppdater-mikrofrontend-manifest-v3.yaml@main
+    needs: build
+    with:
+      id: "pensjonskalkulator-microfrontend"
+      url: "http://pensjonskalkulator-microfrontend-ssr.pensjonskalkulator"
+      appname: "pensjonskalkulator-microfrontend-ssr"
+      namespace: "pensjonskalkulator"
+      cluster: prod-gcp
+      commitmsg: ${{ github.event.head_commit.message}}
+      fallback: "http://pensjonskalkulator-microfrontend-ssr.pensjonskalkulator"
+      ssr: true
+    secrets: inherit
 
   deploy-dev:
     runs-on: "ubuntu-latest"
@@ -106,7 +106,7 @@ jobs:
       id-token: "write"
     needs:
       - build
- #     - update-manifest-prod-gcp
+      - update-manifest-prod-gcp
     strategy:
       matrix:
         cluster: [ prod-gcp ]
